--- a/app/src/main/res/layout/sign_in_activity.xml
+++ b/app/src/main/res/layout/sign_in_activity.xml
@@ -24,6 +24,16 @@
             android:layout_marginBottom="16dp"/>
 
         <TextView
+            android:id="@+id/welcome_text"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:paddingTop="30dp"
+            android:textSize="16sp"
+            android:textColor="#FFFFFF"
+            android:layout_height="wrap_content"
+            android:text="" />
+
+        <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:textAlignment="center"
@@ -72,6 +82,17 @@
             android:paddingHorizontal="40dp"
             android:paddingVertical="10dp"
             android:text="Войти в Эпсилонн" />
+
+        <Button
+            android:id="@+id/reg_button"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:paddingHorizontal="40dp"
+            android:paddingVertical="10dp"
+            android:text="Регистрация" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
