--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -47,5 +47,14 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.onboardactivity.HomeFragment"
-        tools:layout="@layout/home_fragment" />
+        tools:layout="@layout/home_fragment">
+        <action
+            android:id="@+id/action_homeFragment_to_gameFragment"
+            app:destination="@id/gameOfFireAndIce" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/gameOfFireAndIce"
+        android:name="com.example.onboardactivity.GameFragment"
+        tools:layout="@layout/game_of_fire_and_ice_fragment" />
 </navigation>
