--- a/app/src/main/res/layout/game_of_fire_and_ice_fragment.xml
+++ b/app/src/main/res/layout/game_of_fire_and_ice_fragment.xml
@@ -8,5 +8,12 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp" />
 
 </LinearLayout>
+
