[UPDATE]: add resolvers

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -61,7 +61,7 @@
 
     <!-- Add the settings button at the bottom -->
     <Button
-        android:id="@+id/button_open_settings"
+        android:id="@+id/buttonOpenSettings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
