--- a/app/src/main/res/layout/game_of_fire_and_ice_fragment.xml
+++ b/app/src/main/res/layout/game_of_fire_and_ice_fragment.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
-    android:background="@drawable/gradientus"
     android:paddingRight="16dp"
-    android:orientation="vertical"
     android:gravity="center">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -15,5 +15,4 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp" />
 
-</LinearLayout>
-
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
