[UPDATE]: add resolvers for nulls

--- a/app/src/main/res/layout/game_of_fire_and_ice_fragment.xml
+++ b/app/src/main/res/layout/game_of_fire_and_ice_fragment.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
+    android:background="@drawable/gradientus"
     android:gravity="center">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -13,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:textAlignment="center"/>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
