--- a/app/src/main/res/layout/game_of_fire_and_ice_fragment.xml
+++ b/app/src/main/res/layout/game_of_fire_and_ice_fragment.xml
@@ -13,8 +13,10 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="80dp"
         android:layout_marginBottom="8dp"
-        android:textAlignment="center"/>
+        android:textAlignment="center">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
